src/objects/TASKRAY__Project__c.object
<CustomObject>
    <description>This is the primary TaskRay object for projects.  This object may be used to manage reports, dashboards, workflows and other native Salesforce functionality.</description>
    <fields>
        <fullName>Account_CSM__c</fullName>
        <formula>TASKRAY__trAccount__r.CSM__c</formula>
        <label>Account CSM</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_reporting_information__c</fullName>
        <inlineHelpText>Please provide report request details including report types and data recipients, and/or future reporting requests that are not part of this parent project</inlineHelpText>
        <label>Additional reporting information</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Are_we_rolled_out_to_entire_population__c</fullName>
        <label>Are we rolled out to entire population?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Method__c</fullName>
        <label>Billing Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Billing_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_reviews_discussed__c</fullName>
        <inlineHelpText>During the Implementation/Launch+90 phase, has the CIM discussed holding regular business reviews with the client?</inlineHelpText>
        <label>Business reviews discussed?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Frequency__c</fullName>
        <inlineHelpText>During the Implementation/Launch+90 phase, how often has the CIM had calls with the client?</inlineHelpText>
        <label>Call Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Ad Hoc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Event_Details__c</fullName>
        <inlineHelpText>Please provide details on any upcoming or standing events that the client wants Livongo to participate in, AND be sure to include them in the event tracker.</inlineHelpText>
        <label>Client Event Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Implementation_Manager__c</fullName>
        <description>JENGA-986</description>
        <formula>Client_Overview__r.CIM__r.FirstName+&apos; &apos;+Client_Overview__r.CIM__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Implementation Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Overview__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Overview</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>TaskRay Projects</relationshipLabel>
        <relationshipName>TaskRay_Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_Partner_Required_Tags__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the client or partner requires tags for billing, reporting or other purposes.</description>
        <inlineHelpText>Indicates if the client or partner requires tags for billing, reporting or other purposes.</inlineHelpText>
        <label>Client/Partner Required Tags</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_Success_Manager__c</fullName>
        <description>JENGA-986</description>
        <formula>Client_Overview__r.CSM__r.FirstName+&apos; &apos;+Client_Overview__r.CSM__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client Success Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Model__c</fullName>
        <label>Clinical Model</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Clinical_Model</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Clinical_Referrals__c</fullName>
        <label>Clinical Referrals</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>One directional (inbound to Livongo)</fullName>
                </value>
                <value>
                    <fullName>Bi-Directional</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Path__c</fullName>
        <description>JENGA-986</description>
        <formula>Client_Overview__r.Contract_Path__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Sharing_Agreement_Document__c</fullName>
        <description>This is where the link to the Data Sharing Agreement for the specified client will be placed so that we are able to verify that the DSA states the type of reports we are allowed to share</description>
        <inlineHelpText>This is where the link to the Data Sharing Agreement for the specified client will be placed so that we are able to verify that the DSA states the type of reports we are allowed to share.</inlineHelpText>
        <label>Data Sharing Agreement Document</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Data_Sharing_Agreement_in_Place__c</fullName>
        <description>Indicates if the required Data Sharing Agreement(s) are in place between the client and/or partner(s)</description>
        <inlineHelpText>Indicates if the required Data Sharing Agreement(s) are in place between the client and/or partner(s)</inlineHelpText>
        <label>Data Sharing Agreement in Place</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Required</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delimiter__c</fullName>
        <description>Indicates the delimiter to be used in reports delivered to the client or partner</description>
        <inlineHelpText>Indicates the delimiter to be used in reports delivered to the client or partner</inlineHelpText>
        <label>Delimiter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comma (standard)</fullName>
                    <default>true</default>
                    <label>Comma (standard)</label>
                </value>
                <value>
                    <fullName>Pipe</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                    <isActive>false</isActive>
                    <label>Standard</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Downmarket__c</fullName>
        <description>JENGA-986</description>
        <formula>Client_Overview__r.Downmarket__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Downmarket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duration_Business_Days__c</fullName>
        <formula>CASE(MOD(  TASKRAY__Project_Start__c - DATE(1985,6,24),7), 

  0 , CASE( MOD( TASKRAY__Project_End__c - TASKRAY__Project_Start__c ,7),1,2,2,3,3,4,4,5,5,5,6,5,1), 
  1 , CASE( MOD( TASKRAY__Project_End__c - TASKRAY__Project_Start__c ,7),1,2,2,3,3,4,4,4,5,4,6,5,1), 
  2 , CASE( MOD( TASKRAY__Project_End__c - TASKRAY__Project_Start__c ,7),1,2,2,3,3,3,4,3,5,4,6,5,1), 
  3 , CASE( MOD( TASKRAY__Project_End__c - TASKRAY__Project_Start__c ,7),1,2,2,2,3,2,4,3,5,4,6,5,1), 
  4 , CASE( MOD( TASKRAY__Project_End__c - TASKRAY__Project_Start__c ,7),1,1,2,1,3,2,4,3,5,4,6,5,1), 
  5 , CASE( MOD( TASKRAY__Project_End__c - TASKRAY__Project_Start__c ,7),1,0,2,1,3,2,4,3,5,4,6,5,0), 
  6 , CASE( MOD( TASKRAY__Project_End__c - TASKRAY__Project_Start__c ,7),1,1,2,2,3,3,4,4,5,5,6,5,0), 
  999) 
  + 
  (FLOOR(( TASKRAY__Project_End__c - TASKRAY__Project_Start__c )/7)*5)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration (Business Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eligibility_Verification_Method__c</fullName>
        <label>Eligibility Verification Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Eligibility_Verification_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Frequency__c</fullName>
        <inlineHelpText>During the Implementation/Launch+90 phase, how often has the CIM emailed with the client?</inlineHelpText>
        <label>Email Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Bi-Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Ad Hoc</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Notification_of_SFTP_Upload__c</fullName>
        <description>Indicates the email to which notification of report upload will be sent</description>
        <inlineHelpText>Indicates the email to which notification of report upload will be sent. If there is more than one recipient, please separate e-mails with a &quot;,&quot;.</inlineHelpText>
        <label>Email Notification of SFTP Upload</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Enrolled_BH__c</fullName>
        <label>Enrolled - BH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrolled_DM__c</fullName>
        <label>Enrolled - DM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrolled_HTN__c</fullName>
        <label>Enrolled - HTN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrolled_PD__c</fullName>
        <label>Enrolled - PD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrolled_WM__c</fullName>
        <label>Enrolled - WM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrollment_Cap__c</fullName>
        <label>Enrollment Cap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrollment_Marketing_Lead__c</fullName>
        <description>JENGA-986</description>
        <formula>Client_Overview__r.EML__r.FirstName+&apos; &apos;+Client_Overview__r.EML__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enrollment Marketing Lead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expansion_Opportunity_Details__c</fullName>
        <inlineHelpText>Please provide any additional information regarding expansion or cross sell opportunities. If there is no opportunity due to a competitive program, ensure a Client-Level Competitor record has been created.</inlineHelpText>
        <label>Expansion Opportunity Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expected_ROI_Analysis_delivery_date__c</fullName>
        <inlineHelpText>Does the client have an expected date of delivering an ROI Analysis?</inlineHelpText>
        <label>Expected ROI Analysis delivery date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>File_Format__c</fullName>
        <description>Indicates  the format in which reports will be delivered to the client or partner</description>
        <inlineHelpText>Indicates  the format in which reports will be delivered to the client or partner</inlineHelpText>
        <label>File Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>*.csv</fullName>
                    <default>true</default>
                    <label>*.csv</label>
                </value>
                <value>
                    <fullName>*.csv encrypted</fullName>
                </value>
                <value>
                    <fullName>*.txt</fullName>
                </value>
                <value>
                    <fullName>fixed-width</fullName>
                </value>
                <value>
                    <fullName>*.xlsx</fullName>
                    <isActive>false</isActive>
                    <label>*.xlsx</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Recruitable_BH__c</fullName>
        <label>First Recruitable – BH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Recruitable_DM__c</fullName>
        <label>First Recruitable – DM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Recruitable_HTN__c</fullName>
        <label>First Recruitable – HTN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Recruitable_PD__c</fullName>
        <label>First Recruitable – PD</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Recruitable_WM__c</fullName>
        <label>First Recruitable – WM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Have_you_discussed_other_programs__c</fullName>
        <label>Have you discussed other programs?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incentive_Administrator__c</fullName>
        <description>JENGA-1149</description>
        <label>Incentive Administrator</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Report_Type_Detail__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Castlight</fullName>
                </value>
                <value>
                    <fullName>Caremark</fullName>
                </value>
                <value>
                    <fullName>Express Scripts</fullName>
                </value>
                <value>
                    <fullName>Limeade</fullName>
                </value>
                <value>
                    <fullName>Optum Rx</fullName>
                </value>
                <value>
                    <fullName>Redbrick</fullName>
                </value>
                <value>
                    <fullName>Staywell</fullName>
                </value>
                <value>
                    <fullName>Virgin Pulse</fullName>
                </value>
                <value>
                    <fullName>Vitality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incentive_Criteria__c</fullName>
        <description>JENGA-1149</description>
        <label>Incentive Criteria</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_Ticket__c</fullName>
        <label>Jira Ticket</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Contact_Details__c</fullName>
        <inlineHelpText>Please provide additional context regarding key contacts, including whether they should be included on client calls:</inlineHelpText>
        <label>Key Contact Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Link_to_JIRA_ROI_ticket__c</fullName>
        <inlineHelpText>Please provide the link to the JIRA ROI ticket (if already created)</inlineHelpText>
        <label>Link to JIRA ROI ticket</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Link_to_client_reports_box_folder__c</fullName>
        <label>Link to client reports box folder</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Marketing_Nuances__c</fullName>
        <inlineHelpText>Are there additional marketing nuances to consider? Any issues or push-back from the client on marketing, channels, incentives, etc?</inlineHelpText>
        <label>Marketing Nuances</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Status__c</fullName>
        <label>Marketing Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>On Schedule</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>At Risk</fullName>
                </value>
                <value>
                    <fullName>Overdue</fullName>
                </value>
                <value>
                    <fullName>Blocked</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Minors_BH__c</fullName>
        <label>Minors - BH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minors_DM__c</fullName>
        <label>Minors - DM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minors_HTN__c</fullName>
        <label>Minors - HTN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minors_PD__c</fullName>
        <label>Minors - PD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minors_WM__c</fullName>
        <label>Minors - WM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Recruits_BH__c</fullName>
        <label>New Recruits - BH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Recruits_DM__c</fullName>
        <label>New Recruits - DM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Recruits_HTN__c</fullName>
        <label>New Recruits - HTN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Recruits_PD__c</fullName>
        <label>New Recruits - PD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Recruits_WM__c</fullName>
        <label>New Recruits - WM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Recruits_with_Emails_BH__c</fullName>
        <label>New Recruits with Emails - BH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Recruits_with_Emails_DM__c</fullName>
        <label>New Recruits with Emails - DM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Recruits_with_Emails_HTN__c</fullName>
        <label>New Recruits with Emails - HTN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Recruits_with_Emails_PD__c</fullName>
        <label>New Recruits with Emails - PD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Recruits_with_Emails_WM__c</fullName>
        <label>New Recruits with Emails - WM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ongoing_Client_Expectations_Nuances__c</fullName>
        <inlineHelpText>Provide any additional information about the client, ongoing account management expectations, temperament, etc that would be helpful for the CSM to know</inlineHelpText>
        <label>Ongoing Client Expectations/Nuances</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Partnership_Nuances__c</fullName>
        <inlineHelpText>If the client has CVS-TDC, ESI, HCSC, or other nuanced partnership, please explain the nuances and how the engagement with the client may be different</inlineHelpText>
        <label>Partnership Nuances</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Population_Data_Delivery_Details__c</fullName>
        <inlineHelpText>If any of the population data files are being sent via secure email, note why it isn’t sent via sFTP and who sends it. CIM must send an email and CC the CSM to notify contact of recipient change.</inlineHelpText>
        <label>Population Data Delivery Details</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Population_Data_Sources__c</fullName>
        <label>Population Data Sources</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Population_Data_Sources</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Population_Type__c</fullName>
        <description>Copy value of Population type from CO to Taskray project</description>
        <formula>TEXT(Client_Overview__r.Population_Type__c )</formula>
        <label>Population Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Population_of_Coverage__c</fullName>
        <label>Population of Coverage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Population_of_Coverage</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Previously_Recruitable_Population_BH__c</fullName>
        <label>Previously Recruitable Population - BH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previously_Recruitable_Population_DM__c</fullName>
        <label>Previously Recruitable Population - DM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previously_Recruitable_Population_HTN__c</fullName>
        <label>Previously Recruitable Population - HTN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previously_Recruitable_Population_PD__c</fullName>
        <label>Previously Recruitable Population - PD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Previously_Recruitable_Population_WM__c</fullName>
        <label>Previously Recruitable Population - WM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prod_File_Due_Date__c</fullName>
        <description>Date by which the final production report must be delivered</description>
        <inlineHelpText>Date by which the final production report must be delivered</inlineHelpText>
        <label>Prod File Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_s__c</fullName>
        <label>Program(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Behavioral Health</fullName>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Hypertension</fullName>
                </value>
                <value>
                    <fullName>Prediabetes</fullName>
                </value>
                <value>
                    <fullName>Weight Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Duration__c</fullName>
        <formula>TaskRayLaunchDate__c  -  TASKRAY__Project_Start__c</formula>
        <label>Project Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_ID_Long__c</fullName>
        <description>Displays the 18 digit case safe ID for the Project record</description>
        <formula>CASESAFEID(Id)</formula>
        <inlineHelpText>Displays the 18 digit case safe ID for the Project record</inlineHelpText>
        <label>Project ID Long</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name_Wizard_Flow__c</fullName>
        <formula>TaskRay_Project_Number__c &amp; &quot; - &quot; &amp; Name</formula>
        <label>Project Name (Wizard Flow)</label>
        <type>Text</type>
    </fields>
</CustomObject>